--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aboutus</title>
-    <link rel="stylesheet" href="about_us.css">
+    <link rel="stylesheet" href="layout_events.css">
     <link rel="stylesheet" href="mutual_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -34,42 +34,9 @@
     </nav>
 
 
-    <div class="overlappende_billeder">
-        <img src="img_about_us/foran.webp" alt="Billede 1">
-        <img src="img_about_us/bagbaren.webp" alt="Billede 2" id="popImage">
-    </div>
+    
 
-    <div class="tekst1">
-        <p>Veranda is situated in Griffenfeldsgade 17 Nørrebro, Copenhagen.
-            We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and
-            quality spirits.
-            We also feature a thoughtfully curated snack menu, including items such as olives, cheeses,
-            charcuterie,
-            tinned seafood,
-            and freshly baked bread, among others.
-        </p>
-    </div>
-
-    <div class="overlappende_billeder2">
-        <img class="billede1" src="img_about_us/sovevin.webp" alt="Billede 1">
-        <img class="billede2" src="img_about_us/vincloseup.webp" alt="Billede 2">
-        <img class="billede3" src="img_about_us/skinke.webp" alt="Billede 3">
-    </div>
-
-    <div class="tekst2">We collaborate with producers who are dedicated to their craft, preferably engaging in
-        regenerative or organic
-        practices. Ultimately, what holds the utmost importance for us is the people and the passion behind the
-        products
-        we offer.
-    </div>
-
-    <div class="text5">
-        <p>
-            Hope to see you around.
-        </p>
-    </div>
-
-
+<main>
 
     <div class="text4">
         <p>
@@ -82,6 +49,17 @@
         </p>
     </div>
 
+    <p>Veranda is situated in Griffenfeldsgade 17  Nørrebro, Copenhagen. 
+        We're a petite bar offering an extensive array of natural/low-intervention wines, diverse beers, and quality spirits.
+        We also feature a thoughtfully curated snack menu.</p>
+
+    <p>We collaborate with producers who are dedicated to their craft, preferably engaging in regenerative or organic practices. Ultimately, what holds the utmost importance for us is the people and the passion behind the products we offer. </p>
+
+    <p>Everyone is welcome regardless of religion, political views, sexual orientation, gender or skin color.
+    We do not accept discrimination of any kind. </p>
+
+    <p>Hope to see you around.</p>
+</main>
 
     <footer>
         <div class="social-icons">
