--- a/events.html
+++ b/events.html
@@ -13,65 +13,39 @@
 
 <body>
 
-    <header>
-        <nav class="navbar">
-            <ul class="menu">
-                <li><a href="about_us.html">About us</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="merge.html">Merch</a></li>
-                <li><a href="giftcard.html">Giftcard</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <div class="logo">
+            <a href="index.html">
+                <img src="img/logo_blue.webp" alt="Logo" />
+            </a>
+        </div>
+
+        <ul class="menu">
+            <li><a href="about_us.html">About us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="giftcard.html">Giftcard</a></li>
+            <li><a href="merge.html">Merch</a></li>
+        </ul>
 
         <div class="burger">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
         </div>
-    </header>
+    </nav>
 
+<main>
+    <p>At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time on.
+        Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world. 
+        Stay in the loop by following us on Instagram, where we regularly update you on upcoming events.</p>
 
-    <h1>Events</h1>
+<p>Join us every Saturday for a special treat –  OYSTER SATURDAYS which is our hopefully forever ongoing event. </p>
 
-    <div class="tekst1">
-        At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time
-        on.
-    </div>
+<p>Interested in collaborating with us? Feel free to share your ideas with us at info@verandavin.dk</p>
+   
 
-    <div class="overlappende_billeder">
-        <img src="img_events/glade.webp" alt="Billede 1">
-        <img src="img_events/østers.webp" alt="Billede 2" id="popImage">
-    </div>
+</main>
 
-    <div class="tekst2">Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
-        ongoing event.
-    </div>
-
-    <div class="tekst3">
-        Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
-    </div>
-
-    <div class="billede_container">
-        <div class="billede_grid">
-            <div>
-                <img src="img_events/vinplakat.webp" alt="Billede 1" id="popImage2">
-            </div>
-            <div>
-                <img src="img_events/fest.webp" alt="Billede 2">
-            </div>
-        </div>
-    </div>
-
-
-    <div class="tekst4">
-        Stay in the loop by following us on Instagram, where we regularly update you on upcoming events. Interested in
-        collaborating with us? Feel free to share your ideas with us at info@verandavin.dk</div>
-
-    <div class="instagram">
-        <img src="img_events/insta_plugin.png" alt="Billede 2">
-
-    </div>
-    <div id="instagramFeed" class="instagram-feed"></div>
 
     <footer>
         <div class="social-icons">
@@ -80,8 +54,7 @@
         </div>
 
         <div class="tekst_footer">
-            All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200
-            København.
+            All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
         </div>
         <div class="tekst_footer2">
             <a href="https://www.findsmiley.dk/757360">Smiley</a>
