--- a/merge.html
+++ b/merge.html
@@ -33,34 +33,24 @@
         </div>
     </nav>
 
-    <header>
 
-        <p>At Veranda, we offer a curated selection of limited-edition merchandise that reflects the style and
-            quality we appreciate. Our merchandise is available in limited quantities, chosen with care to align with
-            our
-            own
-            preferences. It's your chance to take a piece of Veranda home with you.
-            Drop by and explore our collection – you might just find the perfect item that suits your taste and adds a
-            touch of Veranda to your daily life.</p>
-    </header>
+    
+<main>
+    At Veranda, we offer a curated selection of limited-edition merchandise that reflects the style and quality we appreciate.
+Our merchandise is available in limited quantities, chosen with care to align with our own preferences. 
+It's your chance to take a piece of Veranda home with you.
+Drop by and explore our collection – you might just find the perfect item that suits your taste and adds a touch of Veranda to your daily life.
+</main>
 
-    <section>
-        <div class="merch-item1">
-            <img src="merchphotos/tshirt1.webp" alt="Merchandise 1">
-        </div>
 
-        <div class="merch-item3">
-            <img src="merchphotos/lighter1.webp" alt="Merchandise 3">
-        </div>
-        <div class="merch-item2">
-            <img src="merchphotos/totebag1.webp" alt="Merchandise 2">
-        </div>
-    </section>
+
+
     <footer>
         <div class="social-icons">
             <a href="https://www.instagram.com/verandavin/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="mailto:info@verandavin.dk" class="newsletter-icon"><i class="far fa-envelope"></i></a>
         </div>
+
         <div class="tekst_footer">
             All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
         </div>
