indsat div i aout us ronja

--- a/about_us.html
+++ b/about_us.html
@@ -35,7 +35,7 @@
 
 
     
-
+<div class="scrollable_div" style="overflow: scroll; height: 400px;">
 <main>
 
     <div class="text4">
@@ -59,7 +59,9 @@
     We do not accept discrimination of any kind. </p>
 
     <p>Hope to see you around.</p>
+    
 </main>
+</div>
 
     <footer>
         <div class="social-icons">
@@ -74,6 +76,7 @@
             <a href="https://www.findsmiley.dk/757360">Smiley</a>
         </div>
     </footer>
+
     <script src="menu.js"></script>
     <script src="script.js"></script>
     <script src="aboutus.js"></script>
